--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,15 @@
 {
-    "name": "ircmaxell/password-compat",
-    "description": "A compatibility library for the proposed simplified password hashing algorithm: https://wiki.php.net/rfc/password_hash",
-    "keywords": ["password", "hashing"],
-    "homepage": "https://github.com/ircmaxell/password_compat",
+    "name": "wzpll/wangzheng",
+    "description": "wangzheng",
+    "keywords": ["wangzheng"],
+    "homepage": "https://github.com/wzpll/wangzheng",
     "license": "MIT",
     "authors": [
         {
-            "name": "Anthony Ferrara",
-            "email": "ircmaxell@php.net",
-            "homepage": "http://blog.ircmaxell.com"
+            "name": "wangzheng"
         }
     ],
     "require-dev": {
         "phpunit/phpunit": "4.*"
-    },
-    "autoload": {
-        "files": ["lib/password.php"]
     }
 }
